force-app/main/default/objects/Dev_Forums_Activity__c/Dev_Forums_Activity__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Forums Activity</label>
    <nameField>
        <displayFormat>DFAN-{00000}</displayFormat>
        <label>Dev Forums Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Forums Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>