force-app/main/default/objects/Dev_Forums_Activity__c/fields/Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Activity_Score__c</fullName>
    <label>Activity Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>