force-app/main/default/objects/Dev_Forums_Activity__c/fields/Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>Comment_ID__c</fullName>
    <label>Comment ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>