force-app/main/default/objects/Dev_Forums_Activity__c/fields/Dev_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Contact</label>
    <referenceTo>Dev_Contact__c</referenceTo>
    <relationshipLabel>Dev Forums Activities</relationshipLabel>
    <relationshipName>Dev_Forums_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>