force-app/main/default/objects/Dev_Forums_Activity__c/fields/Dev_Forum__c.field-meta.xml
<CustomField>
    <fullName>Dev_Forum__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Forum</label>
    <referenceTo>Dev_Forum__c</referenceTo>
    <relationshipLabel>Dev Forums Activities</relationshipLabel>
    <relationshipName>Dev_Forums_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>