force-app/main/default/objects/Dev_Forums_Activity__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <label>Post Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>