force-app/main/default/objects/Dev_Forums_Activity__c/fields/Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_ID__c</fullName>
    <description>Source unique identifier for every forum post by a user/developer</description>
    <externalId>true</externalId>
    <label>Post ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>