force-app/main/default/objects/Dev_Forums_Activity__c/fields/Post_Type__c.field-meta.xml
<CustomField>
    <fullName>Post_Type__c</fullName>
    <label>Post Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Reply</fullName>
            </value>
            <value>
                <fullName>First Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>