force-app/main/default/objects/Dev_Forums_Activity__c/fields/Post_URL__c.field-meta.xml
<CustomField>
    <fullName>Post_URL__c</fullName>
    <description>Captures the URL of a forum post</description>
    <label>Post URL</label>
    <length>512</length>
    <type>Html</type>
</CustomField>