force-app/main/default/objects/Dev_Forums_Activity__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>