force-app/main/default/objects/Dev_Forums_Activity__c/fields/Topic_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name_Short__c</fullName>
    <formula>Dev_Forum__r.Topic_Name_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic Name (Short)</label>
    <type>Text</type>
</CustomField>